@@ -1,3 +1,12 @@
+2011-04-16  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        handle new tests in the new results html file
+        https://bugs.webkit.org/show_bug.cgi?id=58715
+
+        * Scripts/webkitpy/layout_tests/layout_package/json_results.html:
+
 2011-04-15  Dirk Pranke  <dpranke@chromium.org>
 
         Reviewed by Ojan Vafai.
